--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # The directory Mix will write compiled artifacts to.
-/_build/
+_build/
 
 # If you run "mix test --cover", coverage assets end up here.
-/cover/
+cover/
 
 # The directory Mix downloads your dependencies sources to.
-/deps/
+deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
@@ -23,16 +23,15 @@ erl_crash.dump
 alfred-*.tar
 
 # Ignore assets that are produced by build tools.
-/priv/static/assets/
+alfred/priv/static/assets/
 
 # Ignore digested assets cache.
-/priv/static/cache_manifest.json
+alfred/priv/static/cache_manifest.json
 
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
-/assets/node_modules/
+node_modules/
 
 # Database files
 *.db
 *.db-*
-
