--- a/cheapdeck/pyproject.toml
+++ b/cheapdeck/pyproject.toml
@@ -1,18 +1,30 @@
-[tool.poetry]
+[project]
 name = "cheapdeck"
 version = "0.1.0"
-description = "Stream deck using a numpad to control OBS over websockets"
-authors = ["Erick Navarro <erick@navarro.io>"]
-
-[tool.poetry.dependencies]
-python = "^3.10"
-websockets = "^10.3"
-pyusb = "^1.2.1"
-
-[tool.poetry.dev-dependencies]
-black = "^22.6.0"
-isort = "^5.10.1"
+description = "Cheap deck to handle OBS actions using websockets"
+authors = [
+    { name = "Erick Navarro", email = "erick@navarro.io" }
+]
+dependencies = [
+    "pyusb>=1.2.1",
+    "websockets>=12.0",
+]
+readme = "README.md"
+requires-python = ">= 3.8"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = []
+
+[tool.rye.scripts]
+start = { cmd = "python app.py", env = { "DYLD_LIBRARY_PATH" = "/opt/homebrew/lib" }}
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/cheapdeck"]
