[cheapdeck] Update python version
Also update installation rye installation script direction

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -21,7 +21,7 @@ jobs:
           RYE_INSTALL_OPTION: "--yes"
         run: |
           apt update && apt install -y build-essential curl bash
-          curl -sSf https://rye-up.com/get | bash
+          curl -sSf https://rye.astral.sh/get | bash
           . "$HOME/.rye/env"
           rye sync
 
